<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Party</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_email" translatable="false">Email</string>
    <string name="action_password">Password</string>
    <string name="action_username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="all_user">All User</string>
    <string name="my_profile">My Profile</string>
    <string name="project_name">Project Name</string>
    <string name="choose_project_type">Choose Project Type:</string>
    <string name="add_new_project">Add New Project</string>
    <string name="project_state">Project State: </string>
    <string name="add_new">Add New</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="title_activity_tasks" translatable="false">TasksActivity</string>
    <string name="add_new_task">Add New Task</string>
    <string name="description">Description</string>
    <string name="invite">Invite</string>
    <string name="state">State</string>
    <string name="dd_mm_yy" translatable="false">dd/MM/yyyy</string>
    <string name="task_name">Task Name</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="level">Level</string>
    <string name="project_empty">Project empty</string>
    <string name="list_members">List Members</string>
    <string name="add_new_member">Add New Member</string>A
    <string name="edit">Edit Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="update">Update</string>
    <string name="comment">Comment</string>
    <string name="set_point">Set Point</string>
    <string name="planning_poker" translatable="false">Planning Poker</string>
    <string name="this_is_description" translatable="false">This is Description</string>
    <string name="chose">Choose</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="test_username" translatable="false">Thanh Quy</string>
    <string name="user_name">User Name</string>
    <string name="test_email" translatable="false">quythanh24@gmail.com</string>
    <string name="test_name" translatable="false">Thanh Quy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_not_voted_point">You have not voted point for this task</string>
    <string name="show_list_voted">Show List Voted</string>
    <string name="list_member_vote">List Member Vote</string>
    <string name="assign_this_task">Assign this task</string>
    <string name="task_type">Task Type</string>
    <string name="date_end">Date End</string>
    <string name="date_start">Date Start</string>
    <string name="done">Done</string>
    <string name="new_password">New Password</string>
    <string name="project_member">Project Member</string>
    <string name="delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="save">Save</string>
    <string name="assignee">Assignee</string>
    <string name="deadline">Deadline: </string>
    <string name="edit_task">Edit Task</string>
    <string name="update_project_successful">Update Project Successful</string>
    <string name="update_project_false">Update Project false</string>
    <string name="create_project_successful">Create new project successful</string>
    <string name="are_you_sure_delete_this_project">Are you sure you want to delete this project</string>
    <string name="delete_task">Delete Task</string>
    <string name="are_you_sure_delete_this_task">Are you sure you want to delete this Task</string>
    <string name="email_is_not_empty">Email is not empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_is_required">Password is required</string>
    <string name="action_phone_number">Phone Number</string>
    <string name="create_account">Create account</string>
    <string name="this_field_required">This field required</string>
    <string name="this_field_cannot_contain_space">This field cannot contain spcae</string>
    <string name="password_too_short">Password too short</string>
    <string name="phone_not_valid">Phone number not valid</string>
    <string name="not_matched_with_password">Not matched with password</string>

    <string name="icon_search_title">Search</string>
    <string name="icon_filter_title">Filter</string>
    <string name="bottom_nav_favorites">Favorite</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="uit_party">UIT Party</string>
    <string name="action_current_password">Current Password</string>
    <string name="action_new_password">New Password</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_next">Next</string>
    <string name="wrong_password">Wrong Password</string>

</resources>
