<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.uit.party.view_model.register.RegisterViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sign_in_background"
        android:onClick="@{() -> viewModel.onBackLogin()}"
        tools:context=".view.RegisterActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#ffcdd2"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:onClick="@{() -> viewModel.onCardClicked()}"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <View
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="#FFCC00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_50sdp"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_full_name"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:text="@{viewModel.fullName}"
                        app:addTextChangedListener="@{viewModel.getFullNameTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_username"
                        android:inputType="textPersonName"
                        android:text="@{viewModel.username}"
                        app:addTextChangedListener="@{viewModel.getUsernameTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_email"
                        android:inputType="textEmailAddress"
                        android:text="@{viewModel.email}"
                        app:addTextChangedListener="@{viewModel.getEmailTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone_number"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_phone_number"
                        android:inputType="phone"
                        android:text="@{viewModel.phoneNumber}"
                        app:addTextChangedListener="@{viewModel.getEmailTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_password"
                        android:inputType="textPassword"
                        android:text="@{viewModel.password}"
                        app:addTextChangedListener="@{viewModel.getPasswordTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_repeat_password"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@{viewModel.confirmPassword}"
                        app:addTextChangedListener="@{viewModel.getConfirmPasswordTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_go"
                    style="@style/MaterialButton"
                    android:layout_marginStart="@dimen/margin_field_form_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_item_form"
                    android:layout_marginEnd="@dimen/margin_field_form_horizontal"
                    android:layout_marginBottom="@dimen/margin_vertical_item_form"
                    android:enabled="@{viewModel.btnRegisterEnabled}"
                    android:onClick="@{() -> viewModel.onRegisterClicked()}"
                    android:text="@string/register" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>