<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.uit.party.ui.signin.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sign_in_background"
        tools:context=".view.LoginActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <View
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="#2fa881" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_50sdp"
                        android:text="@string/login"
                        android:textColor="#FFCC00"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout"
                    android:textColorHint="#c5c5c5"
                    bind:textError="@{viewModel.errorMessageEmail}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_email"
                        android:inputType="textEmailAddress"
                        app:addTextChangedListener="@{viewModel.getUsernameTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout"
                    android:textColorHint="#c5c5c5"
                    app:passwordToggleEnabled="true"
                    bind:textError="@{viewModel.errorMessagePassword}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/TextInputLayout.TextInputEditText"
                        android:hint="@string/action_password"
                        android:inputType="textPassword"
                        app:addTextChangedListener="@{viewModel.getPasswordTextChanged()}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_go"
                    style="@style/MaterialButton"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:enabled="@{viewModel.loginEnabled}"
                    android:onClick="@{() -> viewModel.onLoginClicked()}"
                    android:stateListAnimator="@drawable/state_list_animator_button"
                    android:text="@string/action_sign_in"
                    app:cornerRadius="@dimen/corner_radius" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/cv"
            android:layout_alignEnd="@id/cv"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="-20dp"
            android:onClick="@{() -> viewModel.onRegisterClicked()}"
            android:src="@drawable/plus"
            android:transitionName="loginFab"
            app:fabSize="normal" />

        <ProgressBar
            android:id="@+id/loading_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_64sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:visibility="@{viewModel.showLoading}"
            app:layout_constraintVertical_bias="0.3"
            />
    </RelativeLayout>

</layout>
