<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <variable
                name="viewModel"
                type="com.uit.party.view_model.login.LoginViewModel"
        />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            tools:context=".view.LoginActivity">

        <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_280sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true"
                android:layout_centerInParent="true"
                android:id="@+id/cv">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
            >
                <RelativeLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp">
                    <View
                            android:layout_alignParentStart="true"
                            android:layout_width="@dimen/_8sdp"
                            android:layout_height="match_parent"
                            android:background="#2fa881"
                    />
                    <TextView
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_50sdp"
                            android:text="@string/login"
                            android:textColor="#FFCC00"
                            android:textSize="18sp"
                            android:textStyle="bold"
                    />
                </RelativeLayout>
                <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:paddingStart="@dimen/_50sdp"
                        android:paddingEnd="@dimen/_30sdp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp">
                    <com.google.android.material.textfield.TextInputLayout
                            android:textColorHint="#c5c5c5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                        <com.google.android.material.textfield.TextInputEditText
                                android:textSize="13sp"
                                android:hint="@string/user_name"
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:background="@drawable/selector_bg_edit"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                app:addTextChangedListener="@{viewModel.getUsernameTextChanged()}"
                        />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                        android:paddingStart="@dimen/_50sdp"
                        android:paddingEnd="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp">
                    <com.google.android.material.textfield.TextInputLayout
                            android:textColorHint="#c5c5c5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:passwordToggleEnabled="true"
                    >
                        <com.google.android.material.textfield.TextInputEditText
                                android:textSize="13sp"
                                android:hint="@string/action_password"
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/selector_bg_edit"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                app:addTextChangedListener="@{viewModel.getPasswordTextChanged()}"
                        />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <RelativeLayout
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp">
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/bt_go"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:text="@string/action_sign_in"
                            android:onClick="@{() -> viewModel.onLoginClicked()}"
                            android:enabled="@{viewModel.loginEnabled}"
                    >
                    </com.google.android.material.button.MaterialButton>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:onClick="@{() -> viewModel.onRegisterClicked()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                android:src="@drawable/plus"
                android:transitionName="loginFab"
                android:layout_alignTop="@id/cv"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_alignEnd="@id/cv"
                android:layout_marginEnd="-20dp"
        />

        <ProgressBar
                android:id="@+id/loading_login"
                android:visibility="@{viewModel.loading}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                app:layout_constraintVertical_bias="0.3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"

        />
    </RelativeLayout>

</layout>
